# DS01-EDA

./: .gitignore  DS01.ipynb  README.md  _quarto.yml  about.qmd  get_data.py  pyproject.toml
data/: HMA.parquet  espoo.parquet  helsinki.parquet  vantaa.parquet
