[project]
name = "ds01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "nb-mypy>=1.0.5",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.43.0",
]
